--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,17 @@
   text-align: center;
 }
 
+body {
+  background: lightgrey;
+}
+
 .header {
   position: fixed;
   top: 0;
   height: 6rem;
-  width: 100%;
+  width: 100vw;
   background-image: linear-gradient(rgb(139, 138, 138), yellow);
-  box-shadow: 5px 2px;
+  box-shadow: 0px 2px;
   display: flex;
   justify-content: space-around;
   z-index: 1;
@@ -38,7 +42,7 @@
 .body {
   margin: auto;
   width: 100%;
-  margin-top: 4rem;
+  margin-top: 6rem;
   background: lightgrey;
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -121,7 +125,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .card .top > h1 {
     font-size: 1.5rem;
     line-height: 3rem;
