--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,8 @@ body {
   margin-bottom: auto;
   font-size: 1.5rem;
   background: rgb(90, 201, 238);
-  border-radius: 10px;
   opacity: 0.7;
+  border-radius: 10px;
 }
 
 .card .bottom {
@@ -105,6 +105,35 @@ body {
   border: 3px solid black;
   border-radius: 5px;
   margin: 10px;
+}
+
+.add-hero-section {
+  background: darkgray;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-input {
+  margin: auto;
+  margin-top: 2rem;
+  width: 200px;
+  height: 30px;
+  font-size: 2rem;
+  border-radius: 10px;
+  text-indent: 2px;
+}
+
+.hero-button {
+  margin: auto;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  width: 100px;
+  height: 40px;
+  background: rgb(90, 201, 238);
+  opacity: 0.7;
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 1200px) {
