--- a/src/App.css
+++ b/src/App.css
@@ -103,10 +103,35 @@ body {
   margin: 10px;
 }
 
+.card .delete-button {
+  margin: 10px;
+  background: rgb(248, 93, 93);
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+}
+.card .delete-button:hover {
+  cursor: pointer;
+}
+
+.card .edit-button {
+  margin: 10px;
+  background: rgb(230, 233, 48);
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+}
+.card .edit-button:hover {
+  cursor: pointer;
+}
+
 .add-hero-section {
   background: darkgray;
   width: 100%;
   margin: auto;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
 }
@@ -139,10 +164,62 @@ body {
   opacity: 0.7;
   border-radius: 10px;
 }
-
 .hero-button:hover {
   cursor: pointer;
 }
+
+.modal {
+  width: 55%;
+  margin: auto;
+  margin-bottom: auto;
+  margin-top: 2rem;
+  background: white;
+  border: 3px solid black;
+  border-radius: 10px;
+}
+
+.modal .input-container {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal .input-container input {
+  width: 50%;
+  min-width: 200px;
+  height: 30px;
+  font-size: 2rem;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.modal .button-container {
+  margin: 1rem;
+  margin-top: 0;
+}
+
+.modal .button-container .submit-button {
+  margin: 10px;
+  background: rgb(98, 248, 93);
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+}
+
+.modal .button-container .cancel-button {
+  margin: 10px;
+  background: rgb(248, 194, 93);
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+}
+
+
 
 @media screen and (max-width: 1200px) {
   .card {
